# krusty

./: Cargo.toml  Dioxus.toml  README  cargo-sources.json  chaos.sh
.github/workflows/: release.yml
assets/: tailwind.css
flatpak/: dev.krusty.Krusty.yml
src/: app.rs  kubernetes.rs  main.rs  test_sub.rs
src/components/: mod.rs
src/components/detail_item/: component.rs  mod.rs
src/components/labels/: component.rs  mod.rs
src/components/resource_detail/: component.rs  mod.rs
src/components/resource_row/: component.rs  mod.rs
src/components/resource_table/: component.rs  mod.rs
src/k8s/: client.rs  context.rs  mod.rs
src/models/: deployment.rs  event.rs  ingress.rs  node.rs  pod.rs  secret.rs  service.rs  settings.rs
src/repos/: deployment.rs  event.rs  ingress.rs  mod.rs  node.rs  pod.rs  secret.rs  service.rs
src/ui/: header.rs  mod.rs  sidebar.rs
src/ui/views/: deployment.rs  deployments.rs  event.rs  events.rs  ingress.rs  ingressroutes.rs  mod.rs  node.rs  nodes.rs  pod.rs  pods.rs  secret.rs  secrets.rs  service.rs  services.rs  settings.rs
src/ui/widgets/: graph_widget.rs  mod.rs
src/view_models/: deployment.rs  event.rs  ingress.rs  mod.rs  node.rs  pod.rs  secret.rs  service.rs  settings.rs
src/views/: home.rs  mod.rs  resource_list.rs  route.rs  sidebar.rs
src/views/configmaps/: component.rs  mod.rs
src/views/cronjobs/: component.rs  mod.rs
src/views/daemonsets/: component.rs  mod.rs
src/views/deployments/: component.rs  mod.rs
src/views/endpoints/: component.rs  mod.rs
src/views/ingresses/: component.rs  mod.rs
src/views/jobs/: component.rs  mod.rs
(+12 files in other folders)
