[package]
name = "krusty"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = "3.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
iced = { version = "0.13", features = ["tokio", "image", "svg", "canvas"] }
